# vc_acq_pipeline

./: .env  .gitignore  Makefile  environment.yml  producthunt_api.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: settings.yaml  sources.yaml
requirements/: base.txt  dev.txt  nlp.txt  reporting.txt  scraping.txt
src/acq_pipeline/: __main__.py  cli.py  config.py
src/acq_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/acq_pipeline/modules/: __init__.py
src/acq_pipeline/modules/discovery/: __init__.py  filter.py  filter_rules.py  generic_html.py  merge.py  producthunt_api.py  producthunt_html.py  schema.py  storage.py
src/acq_pipeline/modules/dossier/: __init__.py  io.py  render.py
tests/: test_discovery_filter.py  test_discovery_generic_html.py  test_discovery_merge.py  test_discovery_producthunt_api.py  test_discovery_producthunt_html.py  test_discovery_schema.py  test_discovery_storage_modes.py  test_dossier_render.py  test_smoke.py
tests/fixtures/generic_html/: sample_directory.html
tests/fixtures/producthunt_api/: sample_response.json
tests/fixtures/producthunt_html/: sample_listing.html
