[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acq-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
description = "B2B SaaS acquisition sourcing pipeline"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
